# turnup-go

./: .gitmodules  README.md  azure-pipelines.yaml  doc_api.go  go.mod  go.sum  makefile  pip-freeze.txt  predict.go  predictChances.go  predict_chances.go  predict_helpers_test.go  predict_test.go  setup.cfg
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/_static/: godoc-root.html  godoc.3.html  godoc.4.html  godoc.5.html  godoc.6.html  godoc.7.html
errs/: errors.go
models/: analysis.go  analysis.py.go  analysisPrices.go  pattern.go  pattern_test.go  period.go  period_test.go  phase.go  phaseAutoCalc.go  phaseAutoCalcPeriodGen.go  phaseAutoCore.go  phase_implmentation_test.go  phasesBigSpike.go  phasesDecreasing.go  phasesFluctuating.go  phasesSmallSpike.go  potentialPattern.go  potentialPeriod.go  potentialSpikeInfo.go  potentialWeek.go  potentialWeek_test.go  prediction.go  predictionSpikeInfo.go  predictionSpikeInfo_test.go  prediction_test.go  predictor.go  predictorCalcChances.go  predictorHeat.go  predictorPattern.go  predictorWeek.go  prices.go  spikeInfo.go  ticker.go  tickerPrices.go  ticker_test.go  timeOfDay.go  timeOfDay_test.go  utils.go
models/patterns/: patterns.go
models/timeofday/: timeOfDay.go  timeOfDay_test.go
patterns/: patterns.go  patterns_test.go
predict/: predict.go  predict_helpers_test.go  predict_test.go
predictor/: patternPredictor.go  predictor.go  predictorCalcChances.go  weekPredictor.go  workSync.go
values/: values.go
zdocs/source/: conf.py  (+1 more)
(+12 files in other folders)
