[version]
target = 0.1
release = 

[metadata]
name = turnup

[options]
setup_requires = 
	setuptools
install_requires = 
tests_require = 
dependency_links = 

[options.extras_require]
dev = 
lint = 
doc = 
	sphinx
	sphinx_rtd_theme
build = 
	packaging
test = 

[build_sphinx]
project = turnup
copyright = '2020, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

